Adjusting the file structure